--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
             ).done(function(){
                 $.when(
                     document.body.addEventListener('keydown',startGame),
-                    countDownTimer(60),
+              document.getElementById('question').innerHTML = questions[0],
+                    countDownTimer(5),
                 ).done(function(){
                     document.body.removeEventListener('keydown',startGame),
-                    console.log("FINISHED!")
+                    alert("Finished!!")
+                    document.getElementById('timer').innerHTML =""
                 })
-              document.getElementById('question').innerHTML = questions[0]
               })
             }
 
@@ -37,14 +38,17 @@
             }
 
             function countDownTimer(timer){
-                var d = $.Deferred();
                 document.getElementById('timer').innerHTML = timer;
-                while ( timer > 0){
-                setTimeout(function(){
-                console.log("cntdwntimer");
-                    d.resolve();
-                }, 5000);
-                }
+                var d = $.Deferred();
+                var timerID = setInterval(function(){
+                    if(timer == 1){
+                        clearInterval(timerID);
+                        d.resolve();
+                    }else{
+                        timer--;
+                        document.getElementById('timer').innerHTML = timer;
+                    }
+                },1000)
                 return d.promise();
             }
 
@@ -111,7 +115,6 @@
       function ctdMes(startNum){
           return new Promise( async (resolve,reject) => {
 
-          document.getElementById('startButton').style.display="none";
           printMessage(startNum--);
           while(startNum >0 ){
               //console.log(startNum)
@@ -124,30 +127,13 @@
 
       }
 
-
-      function showQuestion(){
-          return new Promise(( resolve,reject) => {
-              document.getElementById('question').innerHTML = questions[0]
-              resolve();
-          })
-      }
-
       function printMessage(mes){
           document.getElementById('countdown').innerHTML = mes;
       }
-
-
-      async function startButtonClicked(){
-          await ctdMes(3);
-          await showQuestion()
-        }
     </script>
   </head>
   <body>
-    <div id="root" onclick="showQuestion(this)">
-      <button id="startButton" onclick="startButtonClicked()">
-        ボタンをクリックすると始まります
-      </button>
+    <div id="root">
       <div id="countdown">スペースバーを押すと始まります。</div>
       <div id="question"></div>
       <div id="timer"></div>
